--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -27,25 +27,24 @@
   
   
   
-    <form [formGroup]="userRegisterFormGroup" #userRegisterForm (ngSubmit)="register()">
+    <form  (ngSubmit)="register()">
   
       <ion-list>
   
         <ion-item>  
           <ion-label floating>User Name</ion-label>  
-          <ion-input type="email"  formControlName="userName"></ion-input>  
+          <ion-input type="email"  [(ngModel)]="user.userName" name="userNames" ></ion-input>  
         </ion-item>
   
         <ion-item>  
           <ion-label floating>Password</ion-label>  
-          <ion-input  type="password"   formControlName="password"></ion-input>  
+          <ion-input  type="password"   [(ngModel)]="user.password" name="passwords" ></ion-input>  
         </ion-item>
   
       </ion-list>
   
-      <div>
-  
-        <button ion-button [disabled]="!userRegisterFormGroup.valid" block>Register</button>
+      <div>  
+        <button ion-button block>Register</button>
   
       </div>
   
@@ -55,8 +54,3 @@
     </div>
   
   </ion-content>
-
-
-<ion-content padding>
-
-</ion-content>
