--- a/src/pages/check-out/check-out.html
+++ b/src/pages/check-out/check-out.html
@@ -1,18 +1,57 @@
-<!--
-  Generated template for the CheckOutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+  <ion-navbar color="primary">
+    <ion-title>
+      Check Out
+    </ion-title>
 
-  <ion-navbar>
-    <ion-title>CheckOut</ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content>
 
-<ion-content padding>
+  <p *ngIf="submitAttempt" style="color: #ea6153;">Please fill out all details accurately.</p>
 
+  <ion-list>
+
+    <form [formGroup]="billingInfoForm" (ngSubmit)="goToShippingOption()">
+
+      <ion-item>
+        <ion-label floating>Email</ion-label>
+        <ion-input formControlName="email" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Company Name</ion-label>
+        <ion-input formControlName="companyName" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>First Name</ion-label>
+        <ion-input formControlName="firstName" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Last Name</ion-label>
+        <ion-input formControlName="lastName" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Address</ion-label>
+        <ion-input formControlName="address" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Postal Code</ion-label>
+        <ion-input formControlName="postalCode" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>City</ion-label>
+        <ion-input formControlName="city" type="text"></ion-input>
+      </ion-item>
+      <div>
+        <button ion-button block>next</button>
+      </div>
+    </form>
+  </ion-list>
 </ion-content>
