checkout model and related models created

--- a/src/pages/shipping-payment-options/shipping-payment-options.html
+++ b/src/pages/shipping-payment-options/shipping-payment-options.html
@@ -28,4 +28,8 @@
             <ion-option value="m">Default Shipment option</ion-option>
           </ion-select>
         </ion-item>
+        <div>  
+          <button ion-button block>Check Out</button>
+    
+        </div>      
 </ion-content>
