--- a/src/pages/shipping-payment-options/shipping-payment-options.html
+++ b/src/pages/shipping-payment-options/shipping-payment-options.html
@@ -35,7 +35,7 @@
           </ion-select>
         </ion-item>
         <div>  
-          <button ion-button block>Check Out</button>
-    
+          <button ion-button block (click)="showOrderSummary()">Check Out</button>
+
         </div>      
 </ion-content>
