--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -45,9 +45,9 @@
             </ion-item>
 
         <ion-col>
-          <button ion-button icon-left clear small>
+          <button (dblclick)="rateProduct(product)" ion-button icon-left clear small>
             <ion-icon name="thumbs-up"></ion-icon>
-            <div>12 Reviews</div>
+            <div>Rate this</div>
           </button>
         </ion-col>
         <ion-col>
