--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -32,7 +32,7 @@
       <ion-list>
   
         <ion-item>  
-          <ion-label floating>User Name</ion-label>  
+          <ion-label floating>Email</ion-label>  
           <ion-input type="email"  [(ngModel)]="user.userName" name="userNames" ></ion-input>  
         </ion-item>
   
