added ionic tooltip for product review button

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -45,7 +45,7 @@
             </ion-item>
 
         <ion-col>
-          <button  tooltip="double tap" positionV="bottom" arrow (dblclick)="rateProduct(product)" ion-button icon-left clear small>
+          <button  tooltip="double tap" positionV="top" arrow (dblclick)="rateProduct(product)" ion-button icon-left clear small>
             <ion-icon name="thumbs-up"></ion-icon>
             <div>Rate this</div>
           </button>
