--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -5,57 +5,71 @@
   Ionic pages and navigation.
 -->
 
-<ion-header >
+<ion-header>
 
 
 
-    <ion-navbar  color="primary">
-  
-      <ion-title text-center>Register</ion-title>
-  
-    </ion-navbar>
-  
-  
-  
-  </ion-header>
-  
-  
-  
-  
-  
-  <ion-content padding>
-  
-  
-  
-    <form [formGroup]="userRegisterFormGroup" (ngSubmit)="register()">
-  
-      <ion-list>
-  
-        <ion-item>  
-          <ion-label floating>Email</ion-label>  
-          <ion-input type="email"  formControlName="userName"></ion-input>  
-        </ion-item>
-  
-        <ion-item>  
-          <ion-label floating>Password</ion-label>  
-          <ion-input  type="password"  formControlName="password"></ion-input>  
-          
-        </ion-item>
-        <span *ngIf="userRegisterFormGroup.controls.password.hasError('pattern') && userRegisterFormGroup.get('password').touched" class="alert alert-danger">Enter a valid password</span>
-          <span *ngIf="userRegisterFormGroup.controls.password.hasError('required') && userRegisterFormGroup.get('password').touched" class="alert alert-danger">Password is required</span>
-          <span *ngIf="userRegisterFormGroup.controls.password.hasError('minlength') && userRegisterFormGroup.get('password').touched" class="alert alert-danger">Password must be atleast  character</span>
-       
-  
-      </ion-list>
-  
-      <div>  
-        <button ion-button [disabled]="!userRegisterFormGroup.valid" block>Register</button>
-  
-      </div>
-  
-    </form>
-  
-    <div padding>  
+  <ion-navbar color="primary">
+
+    <ion-title text-center>Register</ion-title>
+
+  </ion-navbar>
+
+
+
+</ion-header>
+
+
+
+
+
+<ion-content padding>
+
+
+
+  <form [formGroup]="userRegisterFormGroup" (ngSubmit)="register()">
+    <ion-list>
+      <ion-item>
+        <ion-label floating>Email</ion-label>
+        <ion-input type="email" formControlName="userName"></ion-input>
+      </ion-item>
+      <span *ngIf="userRegisterFormGroup.controls.userName.hasError('pattern')
+          && userRegisterFormGroup.get('userName').touched" class="alert alert-danger">
+        Enter a valid password
+      </span>
+      <span *ngIf="userRegisterFormGroup.controls.userName.hasError('required')
+          && userRegisterFormGroup.get('userName').touched" class="alert alert-danger">
+        Username is required
+      </span>
+      <span *ngIf="userRegisterFormGroup.controls.userName.hasError('minlength')
+         && userRegisterFormGroup.get('userName').touched" class="alert alert-danger">
+        Username must be atleast character
+      </span>
+      <ion-item>
+        <ion-label floating>Password</ion-label>
+        <ion-input type="password" formControlName="password"></ion-input>
+      </ion-item>
+      <span *ngIf="userRegisterFormGroup.controls.password.hasError('pattern')
+       && userRegisterFormGroup.get('password').touched" class="alert alert-danger">
+        Enter a valid password
+      </span>
+      <span *ngIf="userRegisterFormGroup.controls.password.hasError('required')
+        && userRegisterFormGroup.get('password').touched" class="alert alert-danger">
+        Password is required
+      </span>
+      <span *ngIf="userRegisterFormGroup.controls.password.hasError('minlength') 
+       && userRegisterFormGroup.get('password').touched" class="alert alert-danger">
+        Password must be atleast character
+      </span>
+    </ion-list>
+       <div>
+      <button ion-button [disabled]="!userRegisterFormGroup.valid" block>Register</button>
+
     </div>
-  
-  </ion-content>
+
+  </form>
+
+  <div padding>
+  </div>
+
+</ion-content>
