--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
       <button ion-button menuToggle icon-only>
           <ion-icon name='menu'></ion-icon>    
         </button>
