--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -4,15 +4,9 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>SettingsPage</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-list>
+  <ion-item (click)="OpenChangePasswordPage()">
+    <ion-icon name="cog" item-start></ion-icon>
+      Reset Password
+  </ion-item>
+</ion-list>
