--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -13,10 +13,13 @@
     <ion-title>Products</ion-title>
 
     <ion-buttons end>
-      <button  ion-button icon-only>
+      <button (click)="goToCartPage()" ion-button icon-only>
         <ion-icon name="cart"></ion-icon>
       </button>
-      <button  ion-button icon-only>
+      <button (click)="goToFavoritePage()" ion-button icon-only>
+        <ion-icon name="heart"></ion-icon>
+      </button>
+      <button ion-button icon-only (click)="presentExtraMenuPopover($event)">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-buttons>
