Added product sharing feature, now an online shoper can share a product with his contacts or social media friends

--- a/src/pages/products/products.html
+++ b/src/pages/products/products.html
@@ -61,6 +61,12 @@
             <div></div>
           </button>
         </ion-col>
+        <ion-col>
+          <button (click)="shareProduct(product)" ion-button icon-left clear small>
+            <ion-icon name="md-share"></ion-icon>
+            <div></div>
+          </button>
+        </ion-col>
         <ion-col center text-center>
           <ion-note>            
           </ion-note>
