added qrcode scanner for web and desktop login

--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -9,4 +9,8 @@
     <ion-icon name="cog" item-start></ion-icon>
       Reset password
   </ion-item>
+  <ion-item (click)="loginOnWeb()">
+    <ion-icon name="cog" item-start></ion-icon>
+      web login
+  </ion-item>
 </ion-list>
